# memory-deception

./: .gitignore  IMPROVEMENTS.md  README.md  main.py  pyproject.toml
configs/: default.yaml  education.yaml  entertainment.yaml  science.yaml
data/outputs/: 6cf68922-e6a2-486e-8545-0e5cc3f0d5b9.json
data/outputs/reports/: report.md  summary.json
data/outputs/samples/: 1c44cbf3-0284-42c5-9e32-b7f37b58d1da.json  3cc0e730-65f4-48a8-ad38-bdc667f1da37.json  (+15 more)
data/runs/: prepared_seeds.jsonl  run_registry.json
deception_memory/: __init__.py  config.py  enums.py  logging_utils.py  runtime.py  schemas.py  settings.py
deception_memory/analysis/: __init__.py  metrics.py  reports.py
deception_memory/cli/: main.py
deception_memory/generation/: __init__.py  deception_red_team_agent.py  memory_builder.py  quality_checks.py  query_builder.py  refinement.py  seed_loader.py  simple_sample_generator.py  truth_anchor.py
deception_memory/llm/: __init__.py  caching.py  client.py  models.py  parsing.py
deception_memory/pipeline/: __init__.py  baseline_runner.py  dataset_builder.py  deception_judge_runner.py  eval_runner.py  judge_runner.py  orchestrator.py  query_judge_runner.py
deception_memory/prompts/: deception_judge_system.txt  deception_red_team_system.txt  mcts_mutator_system.txt
deception_memory/storage/: __init__.py  jsonl_store.py  run_registry.py
tests/: test_acceptance_logic.py  test_judge_parsing.py  test_main_cli.py  test_manual_stage_contracts.py  test_memory_builder.py  test_pipeline_smoke.py  test_query_builder.py  test_truth_anchor.py
(+1 files in other folders)
