[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deception-memory"
version = "0.1.0"
description = "Research-grade pipeline for memory-conditioned deception benchmarking"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "jinja2>=3.1.0",
  "pandas>=2.0.0",
  "pydantic>=2.7.0",
  "pyyaml>=6.0.0",
  "rich>=13.0.0",
  "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
deception-memory = "deception_memory.cli.main:main"

[tool.setuptools.packages.find]
include = ["deception_memory*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
